@@ -1,3 +1,8 @@
+Thu Jun 29 15:10:22 CEST 2006  Guillaume Desmottes <cass@skynet.be>
+
+	* plugins/notify-osd/notify-osd.c:
+	  - Always escape message. (#346132)
+
 Thu Jun 29 11:02:22 BST 2006  Daniel Drake <dsd@gentoo.org>
 
 	* src/fe-gnome/dcc-window.c:
